add: Adding compile to Windows too